--- a/assets/404.html
+++ b/assets/404.html
@@ -14,7 +14,7 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://typeblitz.tech/404">
+  <meta property="og:url" content="https://typeblitz.netlify.app/404">
   <meta property="og:title" content="404 Page Not Found | TypeBlitz">
   <meta property="og:description"
     content="The page you are looking for doesn't exist. Return to the homepage or contact support.">
@@ -22,11 +22,11 @@
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://typeblitz.tech/404">
+  <meta property="twitter:url" content="https://typeblitz.netlify.app/404">
   <meta property="twitter:title" content="404 Page Not Found | TypeBlitz">
   <meta property="twitter:description"
     content="The page you are looking for doesn't exist. Return to the homepage or contact support.">
-  <meta property="twitter:image" content="https://typeblitz.tech/assets/404-thumbnail.jpg">
+  <meta property="twitter:image" content="https://typeblitz.netlify.app/assets/404-thumbnail.jpg">
 
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -35,7 +35,7 @@
       "@type": "WebPage",
       "name": "404 Page Not Found",
       "description": "Page not found - 404 error on TypeBlitz.",
-      "url": "https://typeblitz.tech/404"
+      "url": "https://typeblitz.netlify.app/404"
     }
     </script>
 
@@ -116,7 +116,7 @@
       Sorry, the page you are looking for doesn't exist!
     </div>
     <div class="error-actions">
-      <a href="https://typeblitz.tech/" class="btn btn-primary">Take Me Home</a>
+      <a href="https://typeblitz.netlify.app/" class="btn btn-primary">Take Me Home</a>
       <a href="https://formsubmit.co/el/fokemo" class="btn btn-secondary">Contact Support</a>
     </div>
   </div>
@@ -132,12 +132,6 @@
     });
   </script>
 
-  <!-- Simple Analytics -->
-  <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-  <noscript>
-    <img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="Simple Analytics tracking"
-      referrerpolicy="no-referrer-when-downgrade" />
-  </noscript>
 </body>
 
 </html>
