--- a/assets/contact.html
+++ b/assets/contact.html
@@ -14,19 +14,19 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://typeblitz.tech/contact">
+    <meta property="og:url" content="https://typeblitz.netlify.app/contact">
     <meta property="og:title" content="Contact Sarwan Yadav | TypeBlitz">
     <meta property="og:description"
         content="Contact Sarwan Yadav via this secure and optimized contact form. Reach out with your inquiries and feedback.">
-    <meta property="og:image" content="https://typeblitz.tech/assets/contact-thumbnail.jpg">
+    <meta property="og:image" content="https://typeblitz.netlify.app/assets/contact-thumbnail.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://typeblitz.tech/contact">
+    <meta property="twitter:url" content="https://typeblitz.netlify.app/contact">
     <meta property="twitter:title" content="Contact Sarwan Yadav | TypeBlitz">
     <meta property="twitter:description"
         content="Contact Sarwan Yadav via this secure and optimized contact form. Reach out with your inquiries and feedback.">
-    <meta property="twitter:image" content="https://typeblitz.tech/assets/contact-thumbnail.jpg">
+    <meta property="twitter:image" content="https://typeblitz.netlify.app/assets/contact-thumbnail.jpg">
 
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -36,8 +36,8 @@
       "mainEntity": {
         "@type": "Organization",
         "name": "Sarwan Yadav",
-        "url": "https://typeblitz.tech",
-        "logo": "https://typeblitz.tech/assets/logo.png",
+        "url": "https://typeblitz.netlify.app/",
+        "logo": "https://typeblitz.netlify.app/assets/logo.png",
         "contactPoint": {
           "@type": "ContactPoint",
           "email": "sarwanyadav6174@gmail.com",
@@ -158,7 +158,7 @@
             <input type="hidden" name="_template" value="table">
             <input type="hidden" name="_subject" value="TypeBlitz Contact Form: New Submission!">
             <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_next" value="https://typeblitz.tech/assets/success.html">
+            <input type="hidden" name="_next" value="https://typeblitz.netlify.app/assets/success.html">
 
             <button type="submit">Send Message</button>
         </form>
