--- a/assets/success.html
+++ b/assets/success.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Your message has been successfully sent.">
     <meta name="theme-color" content="#00ff26">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://typeblitz.tech/success-page">
+    <link rel="canonical" href="https://typeblitz.netlify.app/success-page">
 
     <style>
         body {
@@ -109,7 +109,7 @@
                 successMessage.style.display = 'none';
                 loaderWrapper.style.display = 'flex';
                 setTimeout(() => {
-                    window.location.href = 'https://typeblitz.tech/';
+                    window.location.href = 'https://typeblitz.netlify.app/';
                     setTimeout(() => {
                         window.location.href = 'https://typeblitz.netlify.app/';
                     }, 5000);
