--- a/production/files/v1.4.html
+++ b/production/files/v1.4.html
@@ -80,7 +80,7 @@
           </div>
         </div>
         <div class="text-center mt-4 mb-5" id="download">
-          <a href="https://typeblitz.tech/production/files/v1.4/TypeBlitz%20-%20Setup.exe">Download App</a>
+          <a href="https://typeblitz.netlify.app/production/files/v1.4/TypeBlitz%20-%20Setup.exe">Download App</a>
         </div>
       </div>
     </div>
