--- a/production/files/v2.6.html
+++ b/production/files/v2.6.html
@@ -16,7 +16,7 @@
   <meta property="og:description"
     content="Upgrade your typing skills with TypeBlitz. Download the latest version and start your journey today!" />
   <meta property="og:image" content="image/TypeBlitz.png" />
-  <meta property="og:url" content="https://typeblitz.tech/download-v2.6" />
+  <meta property="og:url" content="https://typeblitz.netlify.app/production/v2.6.html" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <title>Download TypeBlitz: v2.6</title>
@@ -210,7 +210,7 @@
         </article>
 
         <div class="text-center mt-4 mb-5" id="download">
-          <a href="https://typeblitz.tech/production/files/v2.6/TypeBlitz%20-%20Setup.exe"
+          <a href="https://typeblitz.netlify.app/production/files/v2.6/TypeBlitz%20-%20Setup.exe"
             aria-label="Download TypeBlitz v2.6" id="download-btn">Download App</a>
         </div>
       </div>
