--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
   <!-- Security Meta Headers -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data: https://typeblitz.tech;">
+    content="default-src 'self'; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data: https://typeblitz.netlify.app;">
   <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
 
   <!-- Open Graph Meta Tags (for social sharing) -->
-  <meta property="og:url" content="https://typeblitz.tech/">
+  <meta property="og:url" content="https://typeblitz.netlify.app/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="TypeBlitz - Boost Your Typing Skills">
   <meta property="og:description"
     content="Enhance your typing skills with TypeBlitz. Boost your typing speed and accuracy with our comprehensive practice tool.">
-  <meta property="og:image" content="https://typeblitz.tech/assets/images/img/TypeBlitz-512.png">
+  <meta property="og:image" content="https://typeblitz.netlify.app/assets/images/img/TypeBlitz-512.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:alt" content="TypeBlitz Logo">
@@ -42,13 +42,13 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="TypeBlitz - Boost Your Typing Skills">
   <meta name="twitter:description" content="Improve your typing speed and accuracy with TypeBlitz.">
-  <meta name="twitter:image" content="https://typeblitz.tech/assets/images/img/TypeBlitz-512.png">
+  <meta name="twitter:image" content="https://typeblitz.netlify.app/assets/images/img/TypeBlitz-512.png">
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://typeblitz.tech/">
 
   <!-- Preconnect and DNS Prefetch (for faster resource loading) -->
-  <link rel="preconnect" href="https://typeblitz.tech">
+  <link rel="preconnect" href="https://typeblitz.netlify.app/">
   <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
   <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
   <link rel="dns-prefetch" href="https://p4.wallpaperbetter.com">
@@ -305,7 +305,7 @@
             <input type="hidden" name="_template" value="table">
             <input type="hidden" name="_subject" value="TypeBlitz: New Submission!">
             <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_next" value="https://typeblitz.tech/assets/success.html">
+            <input type="hidden" name="_next" value="https://typeblitz.netlify.app/assets/success.html">
             <button type="submit" class="btn btn-primary w-100">Submit</button>
           </form>
         </div>
@@ -330,7 +330,7 @@
           </div>
           <div class="footer-divider mb-3"></div>
           <p class="mb-0">
-            <a href="https://typeblitz.tech/" class="text-white" aria-label="Visit TypeBlitz website">TypeBlitz</a>
+            <a href="https://typeblitz.netlify.app/" class="text-white" aria-label="Visit TypeBlitz website">TypeBlitz</a>
             &copy; 2024
             <span>Sarwan Yadav</span>. All Rights Reserved.
           </p>
