--- a/production/files/v2.4.html
+++ b/production/files/v2.4.html
@@ -90,7 +90,7 @@
 
 
         <div class="text-center mt-4 mb-5" id="download">
-          <a href="https://typeblitz.tech/production/files/v2.4/TypeBlitz%20-%20Setup.exe">Download App</a>
+          <a href="https://typeblitz.netlify.app/production/files/v2.4/TypeBlitz%20-%20Setup.exe">Download App</a>
         </div>
       </div>
     </div>
