--- a/production/files/versions.html
+++ b/production/files/versions.html
@@ -57,7 +57,7 @@
           <h2>404 Not Found</h2>
           <p class="error-details">Sorry, the page you are looking for does not exist.</p>
           <div class="error-actions">
-            <a href="https://typeblitz.tech/" class="btn btn-primary btn-lg">Go to Home</a>
+            <a href="https://typeblitz.netlify.app/" class="btn btn-primary btn-lg">Go to Home</a>
             <a href="https://formsubmit.co/el/fokemo" class="btn btn-secondary btn-lg">Contact Support</a>
           </div>
         </div>
@@ -75,13 +75,6 @@
       window.localStorage.clear();
     });
   </script>
-
-  <!-- Simple Analytics -->
-  <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-  <noscript>
-    <img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="Simple Analytics"
-      referrerpolicy="no-referrer-when-downgrade">
-  </noscript>
 </body>
 
 </html>
