--- a/production/redirect.html
+++ b/production/redirect.html
@@ -13,17 +13,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://typeblitz.tech/download">
+    <meta property="og:url" content="https://typeblitz.netlify.app/download">
     <meta property="og:title" content="Redirecting to Download | TypeBlitz">
     <meta property="og:description" content="Redirecting to the download page. Your download will start shortly.">
-    <meta property="og:image" content="https://typeblitz.tech/assets/download-thumbnail.jpg">
+    <meta property="og:image" content="https://typeblitz.netlify.app/assets/download-thumbnail.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://typeblitz.tech/download">
+    <meta property="twitter:url" content="https://typeblitz.netlify.app/download">
     <meta property="twitter:title" content="Redirecting to Download | TypeBlitz">
     <meta property="twitter:description" content="Redirecting to the download page. Your download will start shortly.">
-    <meta property="twitter:image" content="https://typeblitz.tech/assets/download-thumbnail.jpg">
+    <meta property="twitter:image" content="https://typeblitz.netlify.app/assets/download-thumbnail.jpg">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -104,10 +104,6 @@
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Simple Analytics -->
-    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="Simple Analytics tracking"
-            referrerpolicy="no-referrer-when-downgrade"></noscript>
 </body>
 
 </html>
