Google Meta Tag

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta name="theme-color" content="#0076CE" />
   <meta name="language" content="en-US">
   <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="WMhKG8wyqadZSkX0PKIkyv--6CSGCaErWsG6j5pnV-Q" />
 
   <!-- SEO Improvements -->
   <meta name="rating" content="general">
@@ -330,7 +331,8 @@
           </div>
           <div class="footer-divider mb-3"></div>
           <p class="mb-0">
-            <a href="https://typeblitz.netlify.app/" class="text-white" aria-label="Visit TypeBlitz website">TypeBlitz</a>
+            <a href="https://typeblitz.netlify.app/" class="text-white"
+              aria-label="Visit TypeBlitz website">TypeBlitz</a>
             &copy; 2024
             <span>Sarwan Yadav</span>. All Rights Reserved.
           </p>
