--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Enhance your typing skills with TypeBlitz. Boost your speed and accuracy with our innovative typing practice tool.">
-  <meta name="keywords" content="typing, speed, improvement, TypeBlitz, typing practice, typing tool">
+    content="Boost your typing skills with TypeBlitz. Improve speed, accuracy, and performance using innovative typing exercises. Perfect for beginners and experts alike.">
+  <meta name="keywords"
+    content="typing, typing tool, speed typing, improve typing, typing practice, TypeBlitz, speed, accuracy, typing app, typing software">
   <meta name="author" content="Sarwan Yadav">
   <meta name="email" content="rangersarwan@gmail.com">
   <meta name="phone" content="+91 8960446756">
-  <meta name="theme-color" content="#0076CE" />
+  <meta name="theme-color" content="#0076CE">
   <meta name="language" content="en-US">
   <meta name="robots" content="index, follow">
   <meta name="google-site-verification" content="WMhKG8wyqadZSkX0PKIkyv--6CSGCaErWsG6j5pnV-Q" />
@@ -33,7 +34,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="TypeBlitz - Boost Your Typing Skills">
   <meta property="og:description"
-    content="Enhance your typing skills with TypeBlitz. Boost your typing speed and accuracy with our comprehensive practice tool.">
+    content="Enhance your typing skills with TypeBlitz. Boost your typing speed and accuracy through a variety of interactive exercises and challenges.">
   <meta property="og:image" content="https://typeblitz.netlify.app/assets/images/img/TypeBlitz-512.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -42,7 +43,8 @@
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="TypeBlitz - Boost Your Typing Skills">
-  <meta name="twitter:description" content="Improve your typing speed and accuracy with TypeBlitz.">
+  <meta name="twitter:description"
+    content="Improve your typing speed and accuracy with TypeBlitz. Boost your performance through interactive challenges and real-time feedback.">
   <meta name="twitter:image" content="https://typeblitz.netlify.app/assets/images/img/TypeBlitz-512.png">
 
   <!-- Canonical URL -->
@@ -86,6 +88,7 @@
   <script defer src="assets/js/popper.min.js"></script>
   <script defer src="assets/js/bootstrap.min.js"></script>
   <script defer src="assets/js/utils.js"></script>
+
   <!-- Title -->
   <title>TypeBlitz - Boost Your Typing Skills</title>
 
