--- a/production/files/v2.6.html
+++ b/production/files/v2.6.html
@@ -218,7 +218,7 @@
   </main>
 
   <footer class="text-center py-3">
-    <p>&copy; 2024 TypeBlitz | Designed by <a href="https://sarwan.dev" target="_blank" rel="noopener noreferrer">Sarwan
+    <p>&copy; 2024 TypeBlitz | Designed by <a href="https://sarwan.netlify.app" target="_blank" rel="noopener noreferrer">Sarwan
         Yadav</a></p>
   </footer>
 
