--- a/production/latest/latest.html
+++ b/production/latest/latest.html
@@ -13,8 +13,10 @@
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="image/TypeBlitz.ico">
 
-    <!-- SEO and Performance Improvements -->
+    <!-- SEO & Performance Optimization -->
     <meta http-equiv="refresh" content="2; url=https://typeblitz.netlify.app/production/files/v2.6.html">
+
+    <!-- Inline Styles for Page -->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -28,33 +30,36 @@
             text-align: center;
         }
 
-        .inb {
-            margin-top: 20px;
+        .message-container {
+            text-align: center;
+            font-size: 1.1rem;
         }
 
-        .pf {
-            font-size: 1rem;
+        .footer {
+            margin-top: 20px;
+            font-size: 0.9rem;
             color: #555;
         }
 
-        .a1 {
+        .link {
             color: #007bff;
             text-decoration: none;
         }
 
-        .a1:hover {
+        .link:hover {
             text-decoration: underline;
         }
     </style>
 </head>
 
 <body>
-    <div>
+    <div class="message-container">
         <p>You will be redirected to the new download page in 2 seconds.</p>
-        <div class="inb">
-            <p class="pf">
-                The website has been built with <i class="fas fa-heart"></i> by
-                <a href="https://sarwan6174.github.io/sarwan.github.io" class="a1">Sarwan Yadav</a>
+
+        <div class="footer">
+            <p>Created with <i class="fas fa-heart"></i> by
+                <a href="https://devsarwan.github.io/sarwan/" class="link" target="_blank"
+                    rel="noopener noreferrer">Sarwan Yadav</a>
             </p>
         </div>
     </div>
