--- a/production/redirect.html
+++ b/production/redirect.html
@@ -5,27 +5,24 @@
     <!-- Essential Meta Tags for SEO -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Redirecting to the download page. Your download will start shortly.">
-    <meta name="keywords" content="download, redirect, file download">
+    <meta name="description" content="Redirecting you to the download page. Your download will begin shortly.">
+    <meta name="keywords" content="download, file, redirect, TypeBlitz">
     <meta name="author" content="Sarwan Yadav">
     <meta name="theme-color" content="#0076CE" />
-    <title>Redirecting to Download | TypeBlitz</title>
-
-    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://typeblitz.netlify.app/download">
     <meta property="og:title" content="Redirecting to Download | TypeBlitz">
     <meta property="og:description" content="Redirecting to the download page. Your download will start shortly.">
     <meta property="og:image" content="https://typeblitz.netlify.app/assets/download-thumbnail.jpg">
-
-    <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://typeblitz.netlify.app/download">
     <meta property="twitter:title" content="Redirecting to Download | TypeBlitz">
     <meta property="twitter:description" content="Redirecting to the download page. Your download will start shortly.">
     <meta property="twitter:image" content="https://typeblitz.netlify.app/assets/download-thumbnail.jpg">
 
-    <!-- Bootstrap CSS -->
+    <title>Redirecting to Download | TypeBlitz</title>
+
+    <!-- Bootstrap CSS (Minified version for faster load) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Styles -->
@@ -38,33 +35,25 @@
             margin: 0;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f0f8ff;
-            /* Match background color to the GIF */
-        }
-
-        .container {
             text-align: center;
         }
 
         .loading-animation img {
-            width: 200px;
-            /* Medium size */
+            width: 180px;
             height: auto;
             margin-bottom: 20px;
             border: 5px solid #007bff;
-            /* Optional: Add a border to match the design theme */
             border-radius: 8px;
-            /* Optional: Rounded corners for a modern look */
         }
 
         h1 {
-            font-size: 2.5rem;
-            /* Adjusted font size */
+            font-size: 2rem;
             color: #007bff;
+            margin: 15px 0;
         }
 
         p {
-            font-size: 1.25rem;
-            /* Adjusted font size */
+            font-size: 1.125rem;
             color: #6c757d;
         }
 
@@ -77,16 +66,16 @@
             }
 
             .loading-animation {
-                margin-right: 30px;
+                margin-right: 20px;
             }
         }
     </style>
 </head>
 
 <body>
-    <div class="container d-flex flex-column justify-content-center align-items-center">
+    <div class="container">
         <div class="loading-animation">
-            <img src="files/giphy.gif" alt="Loading animation">
+            <img src="files/giphy.gif" alt="Loading animation showing a file being prepared for download">
         </div>
         <div>
             <h1>Redirecting...</h1>
@@ -96,12 +85,12 @@
 
     <!-- JavaScript for Redirection -->
     <script>
-        setTimeout(() => {
-            window.location.href = "files/v2.6.html"; // Replace with your actual download page URL
+        setTimeout(function () {
+            window.location.href = "files/v2.6.html"; // Change to your actual download page URL
         }, 5000); // Redirect after 5 seconds
     </script>
 
-    <!-- Bootstrap JS and Popper.js -->
+    <!-- Bootstrap JS and Popper.js (Minified for faster load) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
