--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Boost your typing skills with TypeBlitz. Improve speed, accuracy, and performance using innovative typing exercises. Perfect for beginners and experts alike.">
-  <meta name="keywords"
-    content="typing, typing tool, speed typing, improve typing, typing practice, TypeBlitz, speed, accuracy, typing app, typing software">
+    content="Enhance your typing skills with TypeBlitz. Boost your speed and accuracy with our innovative typing practice tool.">
+  <meta name="keywords" content="typing, speed, improvement, TypeBlitz, typing practice, typing tool">
   <meta name="author" content="Sarwan Yadav">
   <meta name="email" content="rangersarwan@gmail.com">
   <meta name="phone" content="+91 8960446756">
-  <meta name="theme-color" content="#0076CE">
   <meta name="language" content="en-US">
   <meta name="robots" content="index, follow">
   <meta name="google-site-verification" content="WMhKG8wyqadZSkX0PKIkyv--6CSGCaErWsG6j5pnV-Q" />
@@ -34,8 +32,8 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="TypeBlitz - Boost Your Typing Skills">
   <meta property="og:description"
-    content="Enhance your typing skills with TypeBlitz. Boost your typing speed and accuracy through a variety of interactive exercises and challenges.">
-  <meta property="og:image" content="https://typeblitz.netlify.app/assets/images/img/TypeBlitz-512.png">
+    content="Enhance your typing skills with TypeBlitz. Boost your typing speed and accuracy with our comprehensive practice tool.">
+  <meta property="og:image" content="https://typeblitz.netlify.app/assets/images/img/TypeBlitz.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:alt" content="TypeBlitz Logo">
@@ -43,12 +41,11 @@
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="TypeBlitz - Boost Your Typing Skills">
-  <meta name="twitter:description"
-    content="Improve your typing speed and accuracy with TypeBlitz. Boost your performance through interactive challenges and real-time feedback.">
-  <meta name="twitter:image" content="https://typeblitz.netlify.app/assets/images/img/TypeBlitz-512.png">
+  <meta name="twitter:description" content="Improve your typing speed and accuracy with TypeBlitz.">
+  <meta name="twitter:image" content="https://typeblitz.netlify.app/assets/images/img/TypeBlitz.png">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://typeblitz.tech/">
+  <link rel="canonical" href="https://typeblitz.netlify.app/">
 
   <!-- Preconnect and DNS Prefetch (for faster resource loading) -->
   <link rel="preconnect" href="https://typeblitz.netlify.app/">
@@ -56,20 +53,21 @@
   <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
   <link rel="dns-prefetch" href="https://p4.wallpaperbetter.com">
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="assets/images/img/favicon.ico">
+  <!-- Favicon and Icons -->
+  <link rel="icon" type="image/png" href="/assets/images/favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/assets/images/favicon/favicon.svg" />
+  <link rel="shortcut icon" href="/assets/images/favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="TypeBlitz" />
+  <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
 
-  <!-- PNG Icons for Various Sizes (Favicon for multiple devices) -->
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/img/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="assets/images/img/favicon-96x96.png">
-
-  <!-- Apple Touch Icon (For iOS devices) -->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/img/apple-touch-icon.png">
-
-  <!-- Android Chrome Icons (For Android devices) -->
-  <link rel="icon" type="image/png" sizes="192x192" href="assets/images/img/TypeBlitz-192x192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="assets/images/img/TypeBlitz-512x512.png">
+  <!-- App Install Meta Tags -->
+  <meta name="mobile-web-app-capable" content="yes"> <!-- Updated -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="application-name" content="TypeBlitz">
+  <meta name="msapplication-TileColor" content="#5971b1">
+  <meta name="msapplication-TileImage" content="/assets/images/favicon/ms-icon-144x144.png">
+  <meta name="theme-color" content="#5971b1">
 
   <!-- Preload Critical Resources -->
   <link rel="preload" href="assets/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -91,7 +89,6 @@
 
   <!-- Title -->
   <title>TypeBlitz - Boost Your Typing Skills</title>
-
 </head>
 
 <body style="--i: 0; color: #333; background-color: #f8f9fa;">
@@ -335,15 +332,19 @@
           <div class="footer-divider mb-3"></div>
           <p class="mb-0">
             <a href="https://typeblitz.netlify.app/" class="text-white"
-              aria-label="Visit TypeBlitz website">TypeBlitz</a>
-            &copy; 2024
-            <span>Sarwan Yadav</span>. All Rights Reserved.
+              aria-label="Visit TypeBlitz website">TypeBlitz</a> &copy; 2025 <span>Sarwan Yadav</span>. All Rights
+            Reserved.
+          </p>
+          <p class="mt-2">
+            Designed and <span>Painted by</span> <a href="https://www.ellowdigitals.me" class="text-white"
+              aria-label="Visit Ellow Digital Enterprise">EllowDigitals Enterprise</a>
           </p>
         </div>
       </div>
     </div>
     <div class="color-strip bg-primary"></div>
   </footer>
+
 
   <!-- Popup Container -->
   <div class="popup-container" id="popup">
