--- a/assets/contact.html
+++ b/assets/contact.html
@@ -51,37 +51,37 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #e9ecef;
+            background-color: #e0e0e0;
             margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            padding: 20px;
+            padding: 10px;
             box-sizing: border-box;
             color: #333;
         }
 
         .contact-form {
-            background-color: #ffffff;
-            padding: 30px;
+            background-color: #fff;
+            padding: 25px;
             border-radius: 10px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
             width: 100%;
-            max-width: 450px;
+            max-width: 400px;
             box-sizing: border-box;
         }
 
         .contact-form h2 {
-            margin: 0 0 25px;
+            margin: 0 0 20px;
             text-align: center;
             color: #333;
-            font-size: 26px;
+            font-size: 24px;
         }
 
         .contact-form label {
             display: block;
-            margin-bottom: 10px;
+            margin-bottom: 8px;
             font-weight: bold;
             color: #555;
             font-size: 14px;
@@ -91,7 +91,7 @@
         .contact-form textarea {
             width: 100%;
             padding: 12px;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
             border: 1px solid #ccc;
             border-radius: 5px;
             font-size: 16px;
@@ -110,7 +110,7 @@
             background-color: #28a745;
             color: white;
             border: none;
-            padding: 14px;
+            padding: 12px;
             font-size: 16px;
             border-radius: 5px;
             cursor: pointer;
@@ -121,11 +121,6 @@
 
         .contact-form button:hover {
             background-color: #218838;
-        }
-
-        .contact-form button:focus {
-            outline: none;
-            box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
         }
 
         @media (max-width: 480px) {
