--- a/production/latest/latest.html
+++ b/production/latest/latest.html
@@ -13,10 +13,8 @@
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="image/TypeBlitz.ico">
 
-    <!-- SEO & Performance Optimization -->
+    <!-- SEO and Performance Improvements -->
     <meta http-equiv="refresh" content="2; url=https://typeblitz.netlify.app/production/files/v2.6.html">
-
-    <!-- Inline Styles for Page -->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -30,36 +28,33 @@
             text-align: center;
         }
 
-        .message-container {
-            text-align: center;
-            font-size: 1.1rem;
+        .inb {
+            margin-top: 20px;
         }
 
-        .footer {
-            margin-top: 20px;
-            font-size: 0.9rem;
+        .pf {
+            font-size: 1rem;
             color: #555;
         }
 
-        .link {
+        .a1 {
             color: #007bff;
             text-decoration: none;
         }
 
-        .link:hover {
+        .a1:hover {
             text-decoration: underline;
         }
     </style>
 </head>
 
 <body>
-    <div class="message-container">
+    <div>
         <p>You will be redirected to the new download page in 2 seconds.</p>
-
-        <div class="footer">
-            <p>Created with <i class="fas fa-heart"></i> by
-                <a href="https://devsarwan.github.io/sarwan/" class="link" target="_blank"
-                    rel="noopener noreferrer">Sarwan Yadav</a>
+        <div class="inb">
+            <p class="pf">
+                The website has been built with <i class="fas fa-heart"></i> by
+                <a href="https://sarwan6174.github.io/sarwan.github.io" class="a1">Sarwan Yadav</a>
             </p>
         </div>
     </div>
