--- a/assets/404.html
+++ b/assets/404.html
@@ -18,7 +18,7 @@
   <meta property="og:title" content="404 Page Not Found | TypeBlitz">
   <meta property="og:description"
     content="The page you are looking for doesn't exist. Return to the homepage or contact support.">
-  <meta property="og:image" content="https://typeblitz.tech/assets/404-thumbnail.jpg">
+  <meta property="og:image" content="https://typeblitz.netlify.app/assets/images/img/TypeBlitz.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -26,7 +26,7 @@
   <meta property="twitter:title" content="404 Page Not Found | TypeBlitz">
   <meta property="twitter:description"
     content="The page you are looking for doesn't exist. Return to the homepage or contact support.">
-  <meta property="twitter:image" content="https://typeblitz.netlify.app/assets/404-thumbnail.jpg">
+  <meta property="twitter:image" content="https://typeblitz.netlify.app/assets/images/img/TypeBlitz.png">
 
   <!-- Structured Data -->
   <script type="application/ld+json">
