--- a/assets/contact.html
+++ b/assets/contact.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Contact Sarwan Yadav | TypeBlitz">
     <meta property="og:description"
         content="Contact Sarwan Yadav via this secure and optimized contact form. Reach out with your inquiries and feedback.">
-    <meta property="og:image" content="https://typeblitz.netlify.app/assets/contact-thumbnail.jpg">
+    <meta property="og:image" content="https://typeblitz.netlify.app/assets/images/img/TypeBlitz.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -26,7 +26,7 @@
     <meta property="twitter:title" content="Contact Sarwan Yadav | TypeBlitz">
     <meta property="twitter:description"
         content="Contact Sarwan Yadav via this secure and optimized contact form. Reach out with your inquiries and feedback.">
-    <meta property="twitter:image" content="https://typeblitz.netlify.app/assets/contact-thumbnail.jpg">
+    <meta property="twitter:image" content="https://typeblitz.netlify.app/assets/images/img/TypeBlitz.png">
 
     <!-- Structured Data -->
     <script type="application/ld+json">
