--- a/production/redirect.html
+++ b/production/redirect.html
@@ -16,14 +16,14 @@
     <meta property="og:url" content="https://typeblitz.netlify.app/download">
     <meta property="og:title" content="Redirecting to Download | TypeBlitz">
     <meta property="og:description" content="Redirecting to the download page. Your download will start shortly.">
-    <meta property="og:image" content="https://typeblitz.netlify.app/assets/download-thumbnail.jpg">
+    <meta property="og:image" content="https://typeblitz.netlify.app/assets/images/img/TypeBlitz.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://typeblitz.netlify.app/download">
     <meta property="twitter:title" content="Redirecting to Download | TypeBlitz">
     <meta property="twitter:description" content="Redirecting to the download page. Your download will start shortly.">
-    <meta property="twitter:image" content="https://typeblitz.netlify.app/assets/download-thumbnail.jpg">
+    <meta property="twitter:image" content="https://typeblitz.netlify.app/assets/images/img/TypeBlitz.png">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
