--- a/production/files/v2.6.html
+++ b/production/files/v2.6.html
@@ -15,7 +15,7 @@
   <meta property="og:title" content="Download TypeBlitz: v2.6" />
   <meta property="og:description"
     content="Upgrade your typing skills with TypeBlitz. Download the latest version and start your journey today!" />
-  <meta property="og:image" content="image/TypeBlitz.png" />
+  <meta property="og:image" content="ihttps://typeblitz.netlify.app/assets/images/img/TypeBlitz.png" />
   <meta property="og:url" content="https://typeblitz.netlify.app/production/v2.6.html" />
   <meta name="twitter:card" content="summary_large_image" />
 
@@ -218,7 +218,7 @@
   </main>
 
   <footer class="text-center py-3">
-    <p>&copy; 2024 TypeBlitz | Designed by <a href="https://sarwan.dev" target="_blank" rel="noopener noreferrer">Sarwan
+    <p>&copy; 2024 TypeBlitz | Designed by <a href="https://sarwan.netlify.app/" target="_blank" rel="noopener noreferrer">Sarwan
         Yadav</a></p>
   </footer>
 
