--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             help you reach your typing goals. Dive into engaging exercises with real-time feedback to monitor and
             enhance your progress.</p>
           <p class="mb-0">Crafted with ❤️ by <a href="https://ellowdigitals.me/" target="_blank"
-              rel="noopener noreferrer" class="text-secondary">EllowDigitals</a></p>
+              rel="noopener noreferrer" class="text-secondary">EllowDigital</a></p>
         </div>
       </div>
     </div>
@@ -334,8 +334,8 @@
             Reserved.
           </p>
           <p class="mt-2">
-            Designed and <span>Painted by</span> <a href="https://www.ellowdigitals.me" class="text-white"
-              aria-label="Visit Ellow Digital Enterprise">EllowDigitals Enterprise</a>
+            Designed and<span>maintained by</span> <a href="https://www.ellowdigitals.me" class="text-white"
+              aria-label="Visit Ellow Digital Enterprise">EllowDigital Enterprise</a>
           </p>
         </div>
       </div>
