Upload .exe inside .zip for easier and safer downloads
Replaced direct .exe file upload with a .zip archive containing the .exe installer.
This allows users to download the installer as a .zip file, unzip it locally, and then run the .exe, which helps avoid browser and OS-level download restrictions often triggered by direct .exe files.

--- a/production/files/v2.6.html
+++ b/production/files/v2.6.html
@@ -210,7 +210,7 @@
         </article>
 
         <div class="text-center mt-4 mb-5" id="download">
-          <a href="https://typeblitz.netlify.app/production/files/v2.6/TypeBlitz%20-%20Setup.exe"
+          <a href="https://typeblitz.netlify.app/production/latest/TypeBlitz.zip"
             aria-label="Download TypeBlitz v2.6" id="download-btn">Download App</a>
         </div>
       </div>
