--- a/index.html
+++ b/index.html
@@ -38,10 +38,7 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://typeblitz.netlify.app/" />
-    <meta
-      property="og:image"
-      content="https://typeblitz.netlify.app/assets/images/TypeBlitz.png"
-    />
+    <meta property="og:image" content="https://typeblitz.netlify.app/assets/images/TypeBlitz.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="TypeBlitz Logo" />
